Undo top-bar spacing change from issue #188 as it looks weird in the devtools themselves, fix #227

--- a/public/js/components/RightSidebar.css
+++ b/public/js/components/RightSidebar.css
@@ -4,8 +4,8 @@
 
 .command-bar {
   border-bottom: 1px solid #cccccc;
-  height: 40px;
-  padding: 12px 5px 10px 10px;
+  height: 30px;
+  padding: 8px 5px 10px 10px;
 }
 
 .command-bar > span {
