--- a/public/js/components/Sources.css
+++ b/public/js/components/Sources.css
@@ -6,7 +6,7 @@
 }
 
 .sources-header {
-  flex: 0 0 40px;
+  flex: 0 0 30px;
   border-bottom: 1px solid var(--theme-gray);
 }
 
